# androidpp

./: CMakeLists.txt
android++/: Assertions.cpp  Assertions.h  CMakeLists.txt  ExportMacros.h  Functional.h  KeywordMacros.h  LogHelper.cpp  LogHelper.h  Noncopyable.h  Platform.h  ReferencePtr.h  StringConversion.h  TemporaryChange.h
android++/win/: COMPtr.h  SoftLinking.h
android/android/app/: Activity.cpp  Activity.h  AlertDialog.cpp  AlertDialog.h  CMakeLists.txt  Service.cpp  Service.h
android/android/content/: CMakeLists.txt  ComponentName.cpp  ComponentName.h  Context.cpp  Context.h  ContextThemeWrapper.cpp  ContextThemeWrapper.h  ContextWrapper.cpp  ContextWrapper.h  DialogInterface.h  Intent.cpp  Intent.h  ServiceConnection.h
android/android/content/res/: CMakeLists.txt  Configuration.cpp  Configuration.h  Resources.cpp  Resources.h
android/android/graphics/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Point.h  PointF.h  Rect.h  RectF.h
android/android/media/: AudioFormat.h  AudioTrack.cpp  AudioTrack.h  CMakeLists.txt  MediaFormat.cpp  MediaFormat.h  MediaPlayer.cpp  MediaPlayer.h
android/android/media/appkit/: AudioFile.cpp  AudioFile.h  CMakeLists.txt  MediaSurface.cpp  MediaSurface.h
android/android/opengl/: CMakeLists.txt  GLSurfaceView.cpp  GLSurfaceView.h
android/android/opengl/appkit/: CMakeLists.txt  EGLOffscreenContext.cpp  EGLPbufferSurface.cpp  GLExtensions.cpp  GLExtensions.h  GLTexture.cpp  GLTextureStreamChannel.cpp  GLTextureStreamHost.cpp  GLTextureStreamHost.h  GLTransportSurface.cpp
android/android/os/: Bundle.cpp  Bundle.h  CMakeLists.txt  Handler.cpp  Handler.h  IBinder.h  Looper.cpp  Looper.h  Message.cpp  Message.h  Messenger.cpp  Messenger.h  Parcel.cpp  Parcel.h  ParcelFileDescriptor.cpp  ParcelFileDescriptor.h  Parcelable.cpp  Parcelable.h  Process.h
android/android/os/appkit/: CMakeLists.txt  MessageChannel.cpp  MessageChannelMessages.h  MessageFilter.h  MessageHost.cpp  MessageHost.h  Messages.cpp  Messages.h  Process.cpp  Process.h  ProcessLauncher.cpp  ProcessLauncher.h  ProcessMessages.h  Thread.cpp
android/android/os/win/: ProcessWin.cpp
android/android/text/: CMakeLists.txt  Editable.h  Selection.cpp  Selection.h  Spannable.h
android/android/util/: Base64.h  CMakeLists.txt  DisplayMetrics.cpp  DisplayMetrics.h  Log.cpp  Log.h
android/android/util/win/: Base64Win.cpp
android/android/view/: CMakeLists.txt  ContextMenu.cpp  ContextMenu.h  FrameLayout.cpp  FrameLayout.h  InputDevice.h  InputEvent.cpp  InputEvent.h  KeyEvent.cpp  KeyEvent.h  Menu.h  MenuItem.h  MotionEvent.cpp  MotionEvent.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h  Window.h
android/android/view/appkit/: CMakeLists.txt  ContentFrame.cpp  ContentFrame.h
android/android/view/inputmethod/: BaseInputConnection.cpp  BaseInputConnection.h  CMakeLists.txt  CursorAnchorInfo.cpp  CursorAnchorInfo.h  EditorInfo.h  InputConnection.cpp  InputConnection.h  InputMethodManager.cpp  InputMethodManager.h
android/android/widget/: CMakeLists.txt  PopupMenu.cpp  PopupMenu.h
android/java/lang/: CMakeLists.txt  CharSequence.h  Class.cpp  Class.h  ClassLoader.cpp  ClassLoader.h  Object.h  Package.cpp  Package.h  StringImport.h  System.h
android/java/lang/win/: SystemWin.cpp
private/android++/: CMakeLists.txt
private/android++/win/: DLLMain.cpp  MainWin.cpp
private/android/app/: ActivityHostWindow.cpp  ActivityHostWindow.h  ActivityPrivate.cpp  ActivityPrivate.h  AlertDialogPrivate.cpp  AlertDialogPrivate.h  ApplicationLoader.cpp  ApplicationLoader.h  ApplicationProcess.cpp  ApplicationProcess.h  CMakeLists.txt  HostWindow.h  ServiceHostWindow.cpp  ServiceHostWindow.h  ServicePrivate.cpp  ServicePrivate.h  WindowHandle.h  WindowProvider.cpp  WindowProvider.h
private/android/app/win/: AlertDialogPrivateWin.cpp  ApplicationProcessWin.cpp  WindowProviderWin.cpp  WindowProviderWin.h
private/android/content/: ApplicationLauncher.cpp  ApplicationLauncher.h  CMakeLists.txt  ContextPrivate.cpp  ContextPrivate.h  IntentPrivate.cpp  IntentPrivate.h
private/android/content/win/: ApplicationLauncherWin.cpp
private/android/media/: AudioTrackPrivate.cpp  AudioTrackPrivate.h  CMakeLists.txt  MediaPlayerPrivate.cpp  MediaPlayerPrivate.h
private/android/media/appkit/: AudioFilePrivate.h  CMakeLists.txt
private/android/media/mock/: MediaPlayerPrivateMock.cpp  MediaPlayerPrivateMock.h
private/android/media/win/: AudioTrackPrivateXAudio2Win.cpp  AudioTrackPrivateXAudio2Win.h  DataSourceProviderByteStream.cpp  DataSourceProviderByteStream.h  XAudio2AudioDevice.cpp  XAudio2AudioDevice.h
private/android/opengl/appkit/: CMakeLists.txt
private/android/os/: Binder.cpp  Binder.h  BundlePrivate.cpp  BundlePrivate.h  CMakeLists.txt  HandlerProvider.cpp  HandlerProvider.h  MessageTarget.cpp  MessageTarget.h  ParcelPrivate.cpp  ParcelPrivate.h  ParcelablePrivate.cpp  ParcelablePrivate.h  PlatformFileDescriptor.h
private/android/os/appkit/: CMakeLists.txt
private/android/os/win/: BinderWin.cpp  BinderWin.h  LooperWin.cpp  PlatformFileDescriptorWin.cpp
private/android/view/: CMakeLists.txt  CompositionClause.h  Cursor.h  KeyEventPrivate.cpp  KeyEventPrivate.h  MotionEventPrivate.cpp  MotionEventPrivate.h  ViewHostWindow.cpp  ViewHostWindow.h  ViewPrivate.cpp  ViewPrivate.h  VirtualKeyMap.h  WindowProvider.cpp  WindowProvider.h
private/android/view/appkit/: CMakeLists.txt
private/android/view/inputmethod/: CMakeLists.txt  InputConnectionPrivate.cpp  InputConnectionPrivate.h
private/android/view/win/: CursorWin.cpp  CursorWin.h  MenuWin.cpp  MenuWin.h  (+2 more)
private/android/widget/: CMakeLists.txt
samples/GL2JNIActivity/: CMakeLists.txt  DLLMain.cpp  GL2JNIActivity.cpp  GL2JNIActivity.h  GL2JNILib.cpp  GL2JNILib.h  GL2JNIView.cpp  GL2JNIView.h  Main.cpp
samples/MessengerActivity/: CMakeLists.txt  DLLMain.cpp  Main.cpp  MessengerActivity.cpp  MessengerActivity.h  MessengerService.cpp  MessengerService.h
samples/TestActivity/: CMakeLists.txt  DLLMain.cpp  Main.cpp  TestActivity.cpp  TestActivity.h  TestService.cpp  TestService.h  TestView.cpp  TestView.h
(+26 files in other folders)
